# FastAPI-Best-Practices

./: .dockerignore  .gitignore  .ruff.toml  Makefile  README.md  docker-compose.yml  pyproject.toml  tree.txt
.github/workflows/: CI.yaml
docker/api/: Dockerfile  entrypoint.sh
docker/nginx/: nginx.conf
docker/service/: Dockerfile
src/service/api/: bootstrap.py  main.py
src/service/api/routers/: __init__.py  ws.py
src/service/core/dto/schemas/: __init__.py  models.py
src/service/providers/fastapi_provider/: __init__.py  application.py  lifespan.py
tests/: conftest.py
tests/unit/: test_ci.py
tests/unit/utils/: test_misc.py
