[project]
name = "fastapi-best-practices"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]>=0.116.1",
]

[dependency-groups]
dev = [
    "pyright>=1.1.403",
    "pytest>=8.4.1",
    "ruff>=0.12.4",
]

[tool.pyright]
include = [
    "src",
    "tests"
]
exclude = [
    "**/*.venv",
    "**/__pycache__"
]
