[project]
name = "fastapi-best-practices"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.4",
    "fastapi[all]>=0.116.1",
    "psycopg[async,binary]>=3.2.9",
    "sqlalchemy>=2.0.41",
]

[dependency-groups]
dev = [
    "pyright>=1.1.403",
    "pytest>=8.4.1",
    "ruff>=0.12.4",
]

[tool.pyright]
include = [
    "src",
    "tests"
]
exclude = [
    "**/*.venv",
    "**/__pycache__"
]
